legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr81082.c-4.8.2-3.out.txt
pr81082.c: In function ‘f’:
pr81082.c:8:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i1 = 0; i1 < b1; ++i1)
   ^
pr81082.c:8:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr81082.c:9:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i2 = 0; i2 < b2; ++i2)
     ^
pr81082.c:10:7: error: ‘for’ loop initial declarations are only allowed in C99 mode
       for (int i3 = 0; i3 < b3; ++i3)
       ^
